Work only on prior work section

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,9 +60,7 @@
 \date{}
 
 \includeonly{
-    tex/introduction,
-    tex/thesis_statement,
-    tex/challenges}
+    tex/prior_work}
 
 \begin{document}
 %=======================================================%
