Add section for reachability work

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -1,6 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\begin{frame}{Personal Research}
+\section*{}
+\subsection*{Reachability Set for Orbital Transfers}
 
 Mention my previous research
 
