Overview of benefits of reachability set computation

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -3,24 +3,22 @@
 \section*{}
 \subsection*{Reachability Set for Orbital Transfers}
 
-Mention my previous research
-
-Show how it supports and solves some of the issues mentioned in the challenges
-
-Quick summary of previous research
-\end{frame}
-
-\begin{frame}{Proposed Approach} % -----------------------------------%
-  \begin{itemize}
-      \item \Emph{Reachability set} on \Poincare section allows for systematic transfer design
+\begin{frame}{Orbital Transfers} % -----------------------------------%
+    \begin{itemize}
+        \item \Emph{Reachability set} allows for systematic transfer design
         \begin{itemize}
-            \item Transfer design on lower dimensional subspace
+            \item Transfer design on lower dimensional \Poincare surface
             \item Simple method to incorporate effects of low-thrust 
             \item Avoids the issue of determining initial conditions
         \end{itemize}
-        \pause
-      \item Extension of previous work in planar three-body problem     
-  \end{itemize}
+    \pause
+        \item Alleviates many issues with previous approaches
+        \begin{itemize}
+            \item Initial states chosen from from the reachable set
+            \item Indirect optimal control vs. direct optimal control
+            \item Reachability set gives bounds on motion
+        \end{itemize}    
+    \end{itemize}
 
   \note[itemize]{
     \item Reachability set avoids the need to pick initial conditions
