--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -78,8 +78,7 @@
     \item Control input is chosen to enlarge the reachable set
 \end{itemize}
 \pause
-\begin{figure}
-    \centering
+\begin{center}
     \begin{scaletikzpicturetowidth}{0.4\textwidth}
     \begin{tikzpicture}[scale=\tikzscale]
         \coordinate [label=left:\textcolor{black}{\large \(\vecbf{x}_0\)}] (x0) at (-1,-2);
@@ -111,53 +110,53 @@
         \node [draw=none] at ($ (xn) + (0,1) $) {\large \( J \)};
     \end{tikzpicture}
     \end{scaletikzpicturetowidth}
-\end{figure}
+\end{center}
 
+{\LARGE IMPROVE THIS TIKZ IMAGE}
 \end{frame} %--------------------------------------%
 
-% Intro to the reachability idea
-\begin{frame} %-----------------------------%
-\frametitle{Reachability Set}
-  \begin{itemize}
-  \item Reachable set on Poincar\'e section
-        \begin{itemize}
-            \item The set of states that can be attained from a given initial state via admissable control input
-            \item Enlarge the intersection region on the Poincar\'e section
-        \end{itemize}
-  \item \emph{Computational Geometric Optimal Control}
-    \begin{itemize}
-        \item Poincar\'e section defined by \( \alpha_d \) in \( m_1\)
-        \item Direction on Poincar\'e section defined by \( \theta_d \) in \( m_2 \)
-    \end{itemize}
- \end{itemize}
-  \begin{align*}
-    J &= -\frac{1}{2} \left( \bar{x}(N) - \bar{x}_{n}(N)\right)^T Q_f\left( \bar{x}(N) - \bar{x}_{n}(N)\right)\\
-    m_1 &= 0 = \frac{y(N) - L_{1y}}{x(N) - L_{1x}} - \tan{\alpha_d} \\ 
-    m_2&= 0 = \frac{\dot{x}(N) - \dot{x_n}(N) }{x(N) -x_n(N) } - \tan{\theta_d} \\
-     0 &\geq\bar{u}^T \bar{u} - u_{max}^2 
-    \end{align*}
+\subsection*{Optimal Control Problem}
 
-    \note[itemize]{
-        \item E-L equations are used to derive necessary conditions for optimality
-        \item Results in TPBVP and indirect optimal control
-        
-    }
-\end{frame}   %-----------------------------%
+\begin{frame}{Optimal Control Problem}
+\begin{itemize}
+    \item Reachability defined as distance between controlled and uncontrolled states
+        \[
+            J = -\frac{1}{2} \left( \vecbf{x}(t_f) - \vecbf{x}_{n}(t_f)\right)^T 
+            Q
+            \left( \vecbf{x}(t_f) - \vecbf{x}_{n}(t_f)\right) 
+        \]
+    
+    \pause
+    \item Terminal constraints - \( \vecbf{m}_i = 0\) ensures intersection with \( \Sigma \)
+    \pause
+    \item Control constraint used to emulate realistic system
+        \[
+            c(\vecbf{u}) = \vecbf{u}^T \vecbf{u} - u_m^2 \leq 0 
+        \]
+\end{itemize}
 
-% benefits of variational integrator
+\end{frame}
+
+\begin{frame}{Solving the Optimal Control Problem}
+\begin{itemize}
+    \item Multiple shooting used to solve necessary conditions
+
+    \pause
+    \item Approximate the reachable set via \( \phi_1, \phi_2, \phi_3 \) 
+    \pause
+    \item From the reachable set we chose the state which minimizes \( d \) 
+    \item Compute another reachable set if target is not feasible
+\end{itemize}
+
+\begin{align*}
+    d = \sqrt{k_x \parenth{x_f - x_t }^2 + k_z \parenth{z_f - z_t }^2 + k_{\dot{x}}\parenth{\dot{x}_f - \dot{x}_t }^2 + k_{\dot{z}}\parenth{\dot{z}_f - \dot{z}_t }^2} 
+\end{align*}
+
+{\LARGE Multiple shooting diagram}
+\end{frame}
 
 % results from 2015 AAS
 \subsection*{Circular Restricted Three Body Problem}
-\begin{frame}[t]\frametitle{CRTBP}
-    Motion about CRTBP
-
-    Implemented variational integrator
-
-    Demonstrated use of \Poincare section and reachability
-
-
-
-\end{frame}
 
 \begin{frame}%--------------------------------------------%
 \frametitle{Transfer Problem}
@@ -165,9 +164,9 @@
         \item Transfer from \( L_1 \) orbit to periodic orbits near the Moon
         \item Bounded control input and fixed time horizon
     \end{itemize}
-    \begin{figure}
+    \begin{center}
         \includegraphics[width=0.7\textwidth]{2015AAS/moon_orbit.pdf}
-    \end{figure}
+    \end{center}
     
     \note[itemize]{
         \item Introduce problem
@@ -182,15 +181,15 @@
     \item Reachablility set generated on Poincar\'e section
     \item<3-> Intersection point used to generate a transfer
 \end{itemize}
-    \begin{figure} 
-    \centering 
-    \begin{subfigure}[htbp]{0.5\textwidth} 
-        \only<1-2>{\includegraphics[width=\textwidth]{2015AAS/reach_trajectory}  }
-        \visible<3->{\includegraphics[width=\textwidth]{2015AAS/reach_transfer}  }
-    \end{subfigure}~
-    \begin{subfigure}[htbp]{0.5\textwidth} 
-        \visible<2->{\includegraphics[width=\textwidth]{2015AAS/poincare_compare} }
-    \end{subfigure} 
+    \begin{figure}
+        \centering  
+        \begin{subfigure}[htbp]{0.5\textwidth} 
+            \only<1-2>{\includegraphics[width=\textwidth]{2015AAS/reach_trajectory}  }
+            \visible<3->{\includegraphics[width=\textwidth]{2015AAS/reach_transfer}  }
+        \end{subfigure}~
+        \begin{subfigure}[htbp]{0.5\textwidth} 
+            \visible<2->{\includegraphics[width=\textwidth]{2015AAS/poincare_compare} }
+        \end{subfigure} 
     \end{figure}
     
         \visible<4->{
@@ -357,10 +356,9 @@ Attitude control in the presence of constraints
     \begin{align*}
         A(R,R_d) = \frac{1}{2} \tr{G \left( I - R_d^T R\right)} .
     \end{align*}
-    \begin{figure} 
-        \centering
-        \includegraphics[height=0.6\textheight]{figures/2016ACC/attract_error.pdf}
-    \end{figure}
+    \begin{center} 
+        \includegraphics[draft,height=0.6\textheight]{figures/2016ACC/attract_error.pdf}
+    \end{center}
 }
 
 \only<3>{
@@ -370,10 +368,9 @@ Attitude control in the presence of constraints
     \begin{align*}
         B_i(R) = 1 - \frac{1}{\alpha_i} \ln \left( - \frac{ r^T R^T v_i - \cos \theta_i}{1 + \cos \theta_i}\right).
     \end{align*}
-    \begin{figure}
-        \centering
+    \begin{center}
         \includegraphics[height=0.6\textheight]{figures/2016ACC/avoid_error.pdf}
-    \end{figure}
+    \end{center}
 
 }
 
@@ -384,10 +381,9 @@ Attitude control in the presence of constraints
     \begin{align*}
         \Psi(R, R_d) = A(R,R_d) B(R) .
     \end{align*}
-    \begin{figure}
-        \centering
+    \begin{center}
         \includegraphics[height=0.6\textheight]{figures/2016ACC/combined_error.pdf}
-    \end{figure}
+    \end{center}
 }
 \end{frame}   %-----------------------------%
 
@@ -398,8 +394,10 @@ Attitude control in the presence of constraints
     \item Single obstacle in the path of sensor
 \end{itemize}
 
-\animategraphics[autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_noavoid/single_noavoid-}{0}{99}~
-\animategraphics[autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_avoid/single_avoid-}{0}{99}
+\begin{center}
+    \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_noavoid/single_noavoid-}{0}{99}~
+    \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_avoid/single_avoid-}{0}{99}
+\end{center}
 
 \end{frame}%-----------------------------%
 
@@ -412,10 +410,9 @@ Attitude control in the presence of constraints
     \end{align*}
 \end{itemize}
 
-\begin{figure}
-    \centering
-    \animategraphics[autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/multiple_avoid/multiple_avoid-}{0}{99}
-\end{figure}
+\begin{center}
+    \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/multiple_avoid/multiple_avoid-}{0}{99}
+\end{center}
 
 \end{frame}%---------------------------------------%
 
@@ -425,8 +422,7 @@ Attitude control in the presence of constraints
 \begin{itemize}
     \item Attached to spherical joint to allow only attitude dynamics
 \end{itemize}
-\begin{figure}
-    \centering
+\begin{center}
     \href{https://youtu.be/dsmAbwQram4?t=20s}{\includegraphics[height=0.7\textheight]{figures/2016ACC/hexrotor}}
-\end{figure}
+\end{center}
 \end{frame}   %-----------------------------%
