Draft mode for animations

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -271,8 +271,8 @@ Gravity model is much more complex and dynamics are highly perturbed
 \end{itemize}
 
 \begin{center}
-  \animategraphics[autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/body/IMG}{00001}{01499}~\hfill
-  \animategraphics[autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/inertial/IMG}{00001}{01499}
+  \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/body/IMG}{00001}{01499}~\hfill
+  \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/inertial/IMG}{00001}{01499}
 \end{center}
 
 \end{frame}
