Add intro slide for transfer examples

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -157,7 +157,26 @@
 \end{frame}
 
 % results from 2015 AAS
-\subsection*{Circular Restricted Three Body Problem}
+\subsection*{Transfer Examples}
+
+\begin{frame}[t]{Orbital Transfers via Reachability Sets}
+    \begin{itemize}
+        \item Numerical simulations in two different environments
+        \begin{itemize}
+            \item Planar Circular Restricted Three Body Problem
+            \item Restricted Two Body Problem 
+        \end{itemize}
+        \pause
+        \item Dynamics are related but vary in complexity
+        \begin{itemize}
+            \item Planar vs. Three Dimensional
+            \item Gravitational Potential
+            \item Both defined in a rotating reference frame
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\subsubsection{Three Body Problem}
 
 \begin{frame}%--------------------------------------------%
 \frametitle{Transfer Problem}
