Geo transfer example

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -224,7 +224,27 @@
         }
 \end{frame} %--------------------------------------------------%
 
-\subsection*{Asteroid transfers}
+\begin{frame}{Geostationary  transfer} %----------------------------------------------------%
+    \begin{itemize}
+           \item Tranfer for geostationary orbit to a periodic orbit about \( L_1\)
+           \item Multiple iterations of reachable set required for transfer
+    \end{itemize}
+
+    \begin{center}
+       \only<1>{
+       \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2015ACTA/initial_final.pdf}~
+       \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2015ACTA/geo_transfer_full.pdf} 
+       }
+
+       \only<2>{
+       \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2015ACTA/geo_transfer_zoom.pdf}~
+       \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2015ACTA/poincare.pdf}
+       }
+    \end{center}
+
+\end{frame} %--------------------------------------------%
+
+\subsubsection*{Asteroid transfers}
 
 \begin{frame}[t]\frametitle{Asteroid Paper}
     
