Fix image  calls

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -210,9 +210,9 @@
         \end{itemize}
     \end{itemize}
     \begin{center}
-        \only<1-2>{\includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{2015AAS/reach_trajectory}  }
-        \visible<3->{\includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{2015AAS/reach_transfer}  }
-        \visible<2->{\includegraphics[width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{2015AAS/poincare_compare} }
+        \only<1-2>{\includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{2015AAS/reach_trajectory}~}
+        \only<3->{\includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{2015AAS/reach_transfer}~}
+        \only<2-3>{\includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{2015AAS/poincare_compare}} 
     \end{center}
     
     \note[itemize]{
@@ -263,9 +263,8 @@ Gravity model is much more complex and dynamics are highly perturbed
 \end{itemize}
 
 \begin{center}
-    \includegraphics[width=0.5\textwidth]{figures/2016AAS/initial_transfer.pdf}
-    \hfill
-    \includegraphics[width=0.5\textwidth]{figures/2016AAS/initial_transfer_3d.pdf}
+    \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/initial_transfer.pdf}~
+    \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/initial_transfer_3d.pdf}
 \end{center}
 
 \end{frame}%-----------------------------%
@@ -281,9 +280,8 @@ Gravity model is much more complex and dynamics are highly perturbed
 \end{itemize}
 
 \begin{center}
-    \includegraphics[width=0.5\textwidth]{figures/2016AAS/poincare_xvsxdot.pdf}
-    \hfill
-    \includegraphics[width=0.5\textwidth]{figures/2016AAS/poincare_zvszdot.pdf}
+    \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/poincare_xvsxdot.pdf}~
+    \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/poincare_zvszdot.pdf}
 \end{center}
 
 \end{frame}
@@ -295,9 +293,8 @@ Gravity model is much more complex and dynamics are highly perturbed
     \end{itemize}
 
     \begin{center}
-        \includegraphics[width=0.5\textwidth]{figures/2016AAS/trajectory.pdf}
-        \hfill
-        \includegraphics[width=0.5\textwidth]{figures/2016AAS/trajectory_3d.pdf}
+        \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/trajectory.pdf}~
+        \includegraphics[width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{figures/2016AAS/trajectory_3d.pdf}
     \end{center}
 
 \end{frame}
