--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -277,7 +277,7 @@
 
 \end{frame}
 
-\begin{frame}{Simulation}
+\begin{frame}{Transfer Simulation}
     \begin{itemize}
         \item Four iterations of the reachable state to meet the target set
         \item Final transfer is computed with a fixed terminal state constraint
