Add all the finished sections to the compilation

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,6 +60,9 @@
 \date{}
 
 \includeonly{
+    tex/introduction,
+    tex/thesis_statement,
+    tex/challenges,
     tex/prior_work}
 
 \begin{document}
