Add section title

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -1,6 +1,6 @@
 % !TEX Root = ../proposal.tex
 
-\section*{}
+\section*{Prior Research}
 \subsection*{Reachability Set for Orbital Transfers}
 
 \begin{frame}{Orbital Transfers} % -----------------------------------%
