--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -1,7 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\section*{Prior Research}
-\subsection*{Reachability Set for Orbital Transfers}
+\section{Prior Research}
+\subsection{Reachability Set for Orbital Transfers}
 
 \begin{frame}{Orbital Transfers} % -----------------------------------%
     \begin{itemize}
@@ -26,7 +26,7 @@
   }
 \end{frame} %--------------------------------------%
 
-\subsection*{Dynamic Systems Theory}
+\subsubsection[]{Dynamic Systems Theory}
 
 \begin{frame}{\Poincare map}
 \begin{itemize}
@@ -115,7 +115,7 @@
 {\LARGE IMPROVE THIS TIKZ IMAGE}
 \end{frame} %--------------------------------------%
 
-\subsection*{Optimal Control Problem}
+\subsection[]{Optimal Control Problem}
 
 \begin{frame}{Optimal Control Problem}
 \begin{itemize}
@@ -157,7 +157,7 @@
 \end{frame}
 
 % results from 2015 AAS
-\subsection*{Transfer Examples}
+\subsection[]{Transfer Examples}
 
 \begin{frame}[t]{Orbital Transfers via Reachability Sets}
     \begin{itemize}
@@ -176,7 +176,7 @@
     \end{itemize}
 \end{frame}
 
-\subsubsection{Three Body Problem}
+\subsubsection[]{Three Body Problem}
 
 \begin{frame}%--------------------------------------------%
 \frametitle{Three Body Problem}
@@ -244,7 +244,7 @@
 
 \end{frame} %--------------------------------------------%
 
-\subsubsection*{Asteroid transfers}
+\subsubsection[]{Asteroid transfers}
 
 % Results from 2016 AAS
 \begin{frame}{Transfer Objective} %-----------------------------%
@@ -302,9 +302,7 @@
 
 \end{frame}
 
-\subsection*{Attitude Control}
-
-\subsection*{Constrained Attitude Control}
+\subsection{Constrained Attitude Control}
 
 
 % Results from 2016 ACC
@@ -433,7 +431,7 @@
 
 \end{frame}%---------------------------------------%
 
-\subsection*{Hardware Implementation}
+\subsubsection[]{Hardware Implementation}
 
 \begin{frame}{Hexrotor Experiment} %-----------------------------%
 \begin{itemize}
