--- a/proposal.tex
+++ b/proposal.tex
@@ -60,10 +60,7 @@
 \date{}
 
 \includeonly{
-    tex/introduction,
-    tex/thesis_statement,
-    tex/challenges,
-    tex/prior_work}
+    tex/future_work}
 
 \begin{document}
 %=======================================================%
