--- a/proposal.tex
+++ b/proposal.tex
@@ -63,7 +63,8 @@
     tex/introduction,
     tex/thesis_statement,
     tex/challenges,
-    tex/prior_work}
+    tex/prior_work,
+    tex/future_work}
 
 \begin{document}
 %=======================================================%
