Complete my incomplete thought/sentence

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -19,7 +19,7 @@
         \begin{itemize}
             \item Obstacle avoidance when near irregular surface features
             \item Translation/Rotational constraints
-            \item Avoid use of 
+            \item Avoid use of expensive optimization methods
         \end{itemize}
     \end{itemize}
     \pause
