Work on timeline

--- a/tex/timeline.tex
+++ b/tex/timeline.tex
@@ -1,6 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\begin{frame}[t]\frametitle{Proposed Timeline}
+
+\begin{frame}[t]\frametitle{Research Timeline}
 \begin{center}
     \includegraphics[width=\textwidth]{figures/timeline/timeline.pdf} 
 \end{center}
