--- a/tex/timeline.tex
+++ b/tex/timeline.tex
@@ -1,8 +1,9 @@
 % !TEX Root = ../proposal.tex
 
-\begin{frame}[t]\frametitle{Proposed Timeline}
+
+\begin{frame}[t]\frametitle{Research Timeline}
 \begin{center}
-    \includegraphics[width=\textwidth]{figures/timeline/timeline.pdf} 
+    \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{figures/timeline/timeline.pdf} 
 \end{center}
     
 \end{frame}
