Add timeline to proposal compilation

--- a/proposal.tex
+++ b/proposal.tex
@@ -64,7 +64,8 @@
     tex/thesis_statement,
     tex/challenges,
     tex/prior_work,
-    tex/future_work}
+    tex/future_work,
+    tex/timeline}
 
 \begin{document}
 %=======================================================%
