Only include conlcusion

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,12 +60,7 @@
 \date{}
 
 \includeonly{
-    tex/introduction,
-    tex/thesis_statement,
-    tex/challenges,
-    tex/prior_work,
-    tex/future_work,
-    tex/timeline}
+    tex/conclusion}
 
 \begin{document}
 %=======================================================%
