--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -4,20 +4,29 @@
 
 \section*{}
 \subsection*{Conclusion}
+
 \begin{frame} %-----------------------------%
-\frametitle{Conclusions and Future Direction}
-  \begin{enumerate}
-    \item<+-> Developed a systematic method of designing low-thrust orbital transfer
-    \item<+-> Extension of the previous control free work on invariant manifolds
-    \item<+-> \emph{Computational geometric optimal control}: captures the long-term effects of low-thrust accurately and efficiently   
-  \end{enumerate}
-  \pause
-  Future research goals
-    \begin{itemize} 
-      \item Extension to spatial problem 
-      \item Lyapunov feedback control rather than open loop 
-      \item Incorporate attitude control/constraints 
+\frametitle{Conclusions}
+  \begin{enumerate}[<+->]
+    \item Systematic method of designing low-thrust orbital transfers via \Emph{reachability sets}
+    \begin{itemize}
+        \item Alleviates the need for selecting accurate initial guesses 
+        \item Gives insight into the possible motion of the spacecraft
     \end{itemize}
+    \item \Emph{Constrained attitude control} allows for simple method of satisfying attitude constraints
+    \begin{itemize}
+        \item Completely avoids singularities and ambiguities
+        \item Geometrically exact and computationally efficient
+    \end{itemize}
+    \item \Emph{Asteroid landing} requires the development of a coupled approach 
+    \begin{itemize}
+        \item Global mission scenarios are possible
+        \item Dynamics derived in a consistent and geometrically exact framework
+        \item \Emph{Variational Integrators} provide means of accurate long term propogation
+    \end{itemize}
+
+  \end{enumerate}
+  
 \end{frame}   %-----------------------------%
 
 
