Add publication slide

--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -30,41 +30,25 @@
 \end{frame}   %-----------------------------%
 
 
-\begin{frame}{Conclusions} %-----------------------------%
+\begin{frame}[t]\frametitle{Publications}
 
+{\scriptsize
+Journals
     \begin{itemize}
-        \item Constrained geometric adaptive controller on \( \SO \)
-        \begin{itemize}
-            \item Completely avoids singularities and ambiguities 
-            \item Geometrically exact and simple attitude controller
-            \item Satisfies multiple attitude inequality constraints 
-        \end{itemize}
-        \pause
-        \vs
-        \item Obstacle avoidance computed onboard \emph{and} in real-time
-        \begin{itemize}
-            \item Ideal for aggressive large-angle rotational manuevers
-            \item Computationally efficient and ideal for embedded systems 
-            \item Rigourous stability proof 
-        \end{itemize}
+        \item \fullcite{kulumani2016a}
+        \item \fullcite{kulumani2016e}
     \end{itemize}
 
-\end{frame}   %-----------------------------%
+Conferences
 
-\begin{frame}{Conclusions} %-----------------------------%
 \begin{itemize}
-    \item Transfer using multiple iterations of the reachability set
-    \item Alleviates the need for selecting accurate initial guesses 
-    \item Gives insight into the possible motion of the spacecraft
-    \item Extension of work in the planar three-body problem
-    \item Future research goals
-        \begin{itemize}
-            \item Apply Computational Geometric Optimal Control
-            \item Lyapunov based feedback control for orbital transfers
-        \end{itemize}
+    \item \fullcite{kulumani2015}
+    \item \fullcite{kulumani2016}
+    \item \fullcite{kulumani2016c}
+    \item \fullcite{kulumani2016d}
 \end{itemize}
-
-\end{frame}   %-----------------------------%
+}
+\end{frame}
 
 \begin{frame}[c]{Thank you}
   \centering
