Turn on all the sections

--- a/proposal.tex
+++ b/proposal.tex
@@ -67,7 +67,14 @@
 \date{}
 
 \includeonly{
-    tex/conclusion}
+    tex/introduction,
+    tex/thesis_statement,
+    tex/challenges,
+    tex/prior_work,
+    tex/future_work,
+    tex/timeline,
+    tex/conclusion,
+    tex/backup}
 
 \begin{document}
 %=======================================================%
