--- a/proposal.tex
+++ b/proposal.tex
@@ -45,7 +45,7 @@
 } \setbeamercolor{box}{fg=black,bg=yellow}
 
 
-\title[Short Title]{\large\textbf{Long Title}}
+\title[Asteroid Trajectory Design]{\large\textbf{Coupled Asteroid Trajectory Design: From Orbit to Landing}}
 
 \author{Shankar Kulumani}
 
