PhD candidate sucka

--- a/proposal.tex
+++ b/proposal.tex
@@ -59,7 +59,7 @@
 %  }
    
 \institute{
-  Ph.D. student\\
+  Ph.D. Candidate\\
   \vspace*{0.2cm}
     \textbf{Department of Mechanical \& Aerospace Engineering}\\ \vspace*{0.5cm}
     \includegraphics[width=0.75\textwidth]{figures/gw_txh_2cs_pos.pdf}  
