Add the proposal date

--- a/proposal.tex
+++ b/proposal.tex
@@ -64,7 +64,8 @@
     \textbf{Department of Mechanical \& Aerospace Engineering}\\ \vspace*{0.5cm}
     \includegraphics[width=0.75\textwidth]{figures/gw_txh_2cs_pos.pdf}  
 }{}
-\date{}
+
+\date{17 November 2016}
 
 \includeonly{
     tex/introduction,
