Add tikz packages and options

--- a/proposal.tex
+++ b/proposal.tex
@@ -3,6 +3,8 @@
 \documentclass[11pt,professionalfonts]{beamer}
 % \usefonttheme{serif}
 \usepackage{presentation_packages}
+\usepackage{tikz_packages}
+
 \addbibresource{library.bib}
 \ExecuteBibliographyOptions{
   firstinits=true
