--- a/proposal.tex
+++ b/proposal.tex
@@ -3,6 +3,16 @@
 \documentclass[11pt,professionalfonts]{beamer}
 % \usefonttheme{serif}
 \usepackage{presentation_packages}
+\usepackage{tikz_packages}
+
+\addbibresource{library.bib}
+\ExecuteBibliographyOptions{
+  firstinits=true
+}
+\AtEveryCitekey{%
+\clearfield{url}%
+\clearfield{doi}}
+
 
 \DeclareSIUnit\year{yr} % 2016AAS
 \newcommand{\vs}{\vspace{0.3cm}} % 2016ACC
