--- a/proposal.tex
+++ b/proposal.tex
@@ -70,7 +70,15 @@
 \date{17 November 2016}
 
 \includeonly{
-    tex/timeline}
+    tex/introduction,
+    tex/thesis_statement,
+    tex/challenges,
+    tex/prior_work,
+    tex/future_work,
+    tex/timeline,
+    tex/conclusion,
+    tex/appendix}
+
 
 \begin{document}
 %=======================================================%
