Step through the main itemize not each sub level

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -91,18 +91,18 @@
 % why go to asteroids
 
 \begin{frame}[t]{Why send spacecraft to asteroids?}
-    \begin{itemize}[<+->]
-        \item Some properties only available at the asteroid:
+    \begin{itemize}
+        \item<1-> Some properties only available at the asteroid:
             \begin{itemize}
                 \item High fidelity gravitational model
                 \item Surface samples or return missions
             \end{itemize}
-        \item Gain experience for future missions
+        \item<2-> Gain experience for future missions
             \begin{itemize}
                 \item Weak gravitational field allows for less costly manuevers
                 \item Asteroid tours for future deep-space human missions
             \end{itemize}
-        \item Avoiding future impacts
+        \item<3-> Avoiding future impacts
             \begin{itemize}
                 \item Local spacecraft can aid in ground based tracking
                 \item Mitigation: Gravity tractors, kinetic impactors, solar sails
