--- a/proposal.tex
+++ b/proposal.tex
@@ -70,14 +70,7 @@
 \date{17 November 2016}
 
 \includeonly{
-    tex/introduction,
-    tex/thesis_statement,
-    tex/challenges,
-    tex/prior_work,
-    tex/future_work,
-    tex/timeline,
-    tex/conclusion,
-    tex/appendix}
+    tex/thesis_statement}
 
 
 \begin{document}
