Change title of alert block

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -5,7 +5,7 @@
 
 % THESIS STATEMENT - entire dissertation should support and defend this statement
 \begin{frame}[t]{Proposed research}
-    \begin{block}{Thesis}
+    \begin{block}{Thesis Statement}
         The application of \Emph{geometric mechanics} enables the innovative design of complex trajectories around asteroids, from orbital manuevers to landing.
     \end{block}
     \begin{itemize}
