Add pause in slide

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -8,6 +8,7 @@
     \begin{block}{Thesis Statement}
         The application of \Emph{geometric mechanics} enables the innovative design of complex trajectories around asteroids, from orbital manuevers to landing.
     \end{block}
+    \pause
     \begin{itemize}
         \item \Emph{Geometric mechanics} enables novel capabilities
         \begin{itemize}     
