--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -12,10 +12,9 @@
     \begin{itemize}
         \item \Emph{Geometric mechanics} enables novel capabilities
         \begin{itemize}     
-            \item Exploit the natural dynamics through \Poincare sections and reachability
-            \item Variational integrators for long duration propogation
-            \item Accurate system model representation
-            \item Geometrically exact nonlinear controllers
+            \item \Emph{\Poincare sections} allow for insight into dynamics
+            \item \Emph{Variational integrators} for accurate propagation
+            \item \Emph{Global representation} which avoids singularities
         \end{itemize}
     \end{itemize}
 
@@ -35,8 +34,8 @@
        \item \Emph{Coupled dynamics} play a critical role when near the surface
        \begin{itemize}
             \item Irregular asteroid shape causes complex gravity field
-            \item Global representation of kinematics 
-            \item Autonoumous obstacle avoidance for robust landing scenarios 
+            \item Requires a global representation of kinematics 
+            \item Autonomous obstacle avoidance for robust landing scenarios 
         \end{itemize}
   \end{itemize}
 
