Reword some slides

--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -6,7 +6,7 @@
 \begin{frame}{Challenges for Optimal Transfer Design} %-----------------------------%
 
 \begin{itemize}
-    \item Optimal Trajectory Design
+    \item Optimization in astrodynamics
         \begin{itemize}
             \item Orbital dynamics are nonlinear and chaotic
             \item Very sensitive to initial conditions
@@ -56,7 +56,8 @@
 \begin{frame}
 \frametitle{Dynamic System Modelling}
 \begin{itemize}
-    \item Astrodynamics - motion of particles due to gravity
+    \item Astrodynamics - motion of objects in space
+    \pause
     \item Attitude coupling is dependent on ratio \( \epsilon = \frac{l}{R} \)
         \begin{itemize}
             \item Typically ignored for Earth based missions 
@@ -69,13 +70,18 @@
     J \dot{\Omega}  &= J \Omega \times \Omega +  \sum M(b, R) 
 \end{align*}
 
+\visible<2>{
 \begin{center}
     \includegraphics[width=0.5\textwidth,height=0.4\textheight,keepaspectratio]{figures/ISS_STS-132.jpg}
     \quad
     \includegraphics[width=0.5\textwidth,height=0.4\textheight,keepaspectratio]{figures/Galaxy_15_photo.jpg}
 \end{center}
-
+}
 \note[itemize]{
+    \item Astrodynamics vs. Celestial mechanics is the difference between the study of man-made or natural objects
+    \item Typically consider all objects as point masses - disregard rotational dynamics
+    \item In reality the translational and rotational dynamics are tightly coupled
+    \item The coupled problem greatly increases the complexity
     \item Galaxy-15 is about a \SI{2}{\meter} cube, \SI{2500}{\kilo\gram}
     \item Located in GEO at \SI{133}{\degree} W
 }
@@ -90,12 +96,15 @@
 
 \begin{itemize}
     \item Extensive history of manned/unmanned planetary landings
+    \pause
     \item Previous approaches highly resource dependent
     \begin{itemize}
-        \item Optimization based appraoch
-        \item Extensive human planning
+        \item Typically rely on offline optimization
+        \item Extensive human planning and analysis
     \end{itemize}
-    \item All methods not robust to obstacles/failures
 \end{itemize}
-
+\pause
+\begin{block}{Open Loop}
+    All approaches not robust to obstacles or failures
+\end{block}
 \end{frame} %-------------------------------------%
