--- a/proposal.tex
+++ b/proposal.tex
@@ -69,7 +69,7 @@
 
 \date{17 November 2016}
 
-\includeonly{tex/challenges}
+\includeonly{tex/appendix}
 
 \begin{document}
 %=======================================================%
