Correct biblatex initials

--- a/proposal.tex
+++ b/proposal.tex
@@ -7,7 +7,7 @@
 
 \addbibresource{library.bib}
 \ExecuteBibliographyOptions{
-  firstinits=true
+  giveninits=true
 }
 \AtEveryCitekey{%
 \clearfield{url}%
