Remove figure environment

--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -57,9 +57,9 @@ Conferences
   Mechanical \& Aerospace Engineering \\
   School of Engineering \& Applied Science
   
-  \begin{figure} %figure%
+  \begin{center} %figure%
         \includegraphics[width=0.75\textwidth]{gw_txh_2cs_pos}
-    \end{figure}
+    \end{center}
   
   \url{https://fdcl.seas.gwu.edu}
 \end{frame}
