Add image of earth layers

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -10,16 +10,25 @@
     \( F = -\frac{G m_1 m_2}{R^2} \hat{a}_1 \) for all particles outside of body
 \end{block}
 
-\begin{itemize}
-    \item<2-> Only applies to spherically symmetric bodies 
-    \item<3-> Unknown or possibly changing mass distributions
-    \item<4-> Can derive a \Emph{Gravity Model} using accurate tracking of SC
-\end{itemize}
-\only<4>{
-\[
-    U = \frac{\mu}{r} \sum_{n=0}^\infty \sum_{m=0}^\infty \parenth{\frac{R}{r}}^nP_{n,m}(\sin \phi) \braces{ C_{nm} \cos(m \lambda) + S_{nm} \sin(m \lambda)} 
-\]
-}
+\begin{columns}
+    \begin{column}{0.5\textwidth}
+        \begin{itemize}
+            \item<2-> Only applies to spherically symmetric bodies 
+            \item<3-> \Emph{Gravity Model} requires accurate tracking of SC
+                \begin{itemize}
+                    \item Spherical Harmonic
+                    \item Mass concentration
+                    \item Polyhedron Potential
+                \end{itemize}
+        \end{itemize}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+        \visible<2->{
+        \includegraphics[width=\textwidth,height=0.5\textheight,keepaspectratio]{figures/earth_layers.jpg}
+        }
+    \end{column}
+\end{columns}
+
 \note[itemize]{
     \item Models require detailed data from orbit about asteroid (OD process determines gravity field)
     \item Simplified models (triaxial ellipsoid allows analytical insight)
